# libpmemnew

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  README.md
.github/workflows/: gha.yml
cmake/: libpmemnew.pc.in  packages.cmake  version.hpp.in
doc/: CMakeLists.txt  libpmemnew.Doxyfile.in
examples/: CMakeLists.txt  README
examples/doc_snippets/: template-snippet.cpp
examples/template-example/: CMakeLists.txt  README.md  template-example.cpp
include/libpmemnew/: README.md  header.hpp  version.hpp
src/: README.md  libpmemnew.c  libpmemnew.h  libpmemnew.map
tests/: CMakeLists.txt  helpers.cmake  test_backtrace.c  test_backtrace.h  valgrind_internal.cpp  valgrind_internal.hpp
tests/check_is_pmem/: check_is_pmem.cpp
tests/common/: unittest.hpp  unittest_windows.hpp
tests/template-test/: template-test.cpp
utils/check_license/: check-license.c
utils/docker/: build.sh  pull-or-rebuild-image.sh  run-build.sh  run-doc-update.sh
utils/docker/images/: Dockerfile.archlinux-base-latest  Dockerfile.centos-8  Dockerfile.debian-testing  Dockerfile.debian-unstable  Dockerfile.fedora-31  Dockerfile.fedora-rawhide  Dockerfile.opensuse-leap-latest  Dockerfile.opensuse-tumbleweed-latest  Dockerfile.ubuntu-19.10  Dockerfile.ubuntu-rolling  README.md  build-image.sh
utils/md2man/: default.man
